--- a/assets/css/chimrova.css
+++ b/assets/css/chimrova.css
@@ -1,123 +1,9 @@
-.mg-nav-widget-area-back {
-  height: 260px;
+.chv-footer-left {
+  width: 50%;
+  float: left;
 }
 
-.ds16-tab-content {
-  width: 100%;
-  height: auto;
-  background-color: #fff;
-}
-
-.first-post {
-  width: 100%;
-  height: auto;
-  margin: 0 auto;
-  padding-top: 10px;
-  padding-bottom: 6px;
-  margin-bottom: 20px;
-}
-
-.ds16-img-chif {
-  margin-left: 18%;
-  margin-bottom: 20px;
-}
-
-.ds16-entry-title,
-.ds16-entry-title-chif {
-  text-align: center;
-  font-weight: 700;
-  font-family: "Montserrat", sans-serif;
-  letter-spacing: -0.05em;
-  line-height: 1.3;
-  margin: 0 0 1.4rem;
-  color: #202f5b;
-  font-size: 18px;
-  text-transform: uppercase;
-}
-
-.ds16-entry-title-chif {
-  margin-bottom: 10px;
-}
-
-.navbar-wp .dropdown-menu > li > a {
-  background: #e31e25;
-  color: #fff;
-}
-
-.wrapper {
-  background-color: #eee;
-  max-width: 1290px;
-  margin: 0 auto;
-}
-
-.ds16-baners-sitebar {
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.ds16-baners-sitebar img {
-  width: 70%;
-  height: 100px;
-  margin: 0 auto;
-  margin-left: 18%;
-}
-
-.ds16-plagin-viwe {
-  width: 300px;
-  height: 50px;
-  color: #fff;
-  border: 1px solid #fff;
-  float: right;
-  margin-right: -50px;
-  margin-top: -10px;
-  padding-top: 5px;
-}
-
-.ds16-documents {
-  width: 100%;
-  height: auto;
-  margin-bottom: 30px;
-}
-
-.ds16-footer-left,
-.ds16-footer-right {
-  color: #fff;
-}
-
-.ds16-footer-left h4,
-.ds16-footer-right h4 {
-  color: #fff;
-}
-
-.ds16-mg-sec-title {
-  background-color: #fff;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-top: 15px;
-}
-
-.ds16-yandex-map {
-  width: 100%;
-  height: auto;
-  margin-bottom: 20px;
-}
-
-.ds16-slider-block {
-  width: 100%;
-  height: auto;
-  margin-bottom: 50px;
-  background-color: #fff;
-}
-
-.ds16-main-baners-sitebar {
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-}
-
-.ds16-main-baners-sitebar img {
-  width: 100%;
-  height: 100px;
-  margin: 0 auto;
+.chv-footer-right {
+  width: 49.5%;
+  float: left;
 }
